# merlin

./: README.md  main.py  pyproject.toml
jupyter/screen/: framebuffer_state.ipynb  framebufferstate.ipynb  framebufferstate_new.ipynb
jupyter/screen/.ipynb_checkpoints/: framebuffer_state-checkpoint.ipynb  framebufferstate-checkpoint.ipynb  framebufferstate_new-checkpoint.ipynb  operating_system_events-checkpoint.ipynb
jupyter/sockets/example/: echo_server.ipynb
jupyter/sockets/example/.ipynb_checkpoints/: echo_client-checkpoint.ipynb
