[tool.poetry]
name = "merlin"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkanmelihercan.98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
jupyter = "^1.0.0"
pillow = "^10.1.0"
numpy = "^1.26.3"
mss = "^9.0.1"
opencv-python-headless = "^4.9.0.80"
opencv-jupyter-ui = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
